# rust-web-app-template

./: .autoenv.zsh  .gitignore  Cargo.toml  Dockerfile-init  README.md  diesel.toml  local.env  prod.env  requirements.txt  rust-toolchain.toml  uat.env
dj/proj/: settings.py
etc/zsh/: auto.sh
service/: Cargo.toml
service/db/: Cargo.toml
service/db/src/: lib.rs  pg.rs  redis.rs  schema.rs
service/src/: controller.rs  errors.rs  lib.rs  macros.rs  main.rs  router.rs  utils.rs
