[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = [ "abrar.nitk@gmail.com" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_derive = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-forest = { version= "0.1", features = [ "ansi", "smallvec", "serde", "tokio" ] }
dotenv = "0.15"
db = { path = "./db" }
