[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = [ "abrar.nitk@gmail.com" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
thiserror = { workspace = true }
once_cell = "1"
serde = { version = "1", features = ["derive"]}
serde_json = { workspace = true }
serde_derive = { workspace = true }
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-forest = { workspace = true }
dotenv = "0.15"
db = { path = "./db" }
